--- a/WebApp1Azure/WebApp1Azure.csproj
+++ b/WebApp1Azure/WebApp1Azure.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="6.0.26" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.16.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
